// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Content should render with isShowNavContent disable 1`] = `
<NavContent
  isShowNavContent={false}
>
  <NavContent__NavContainer
    isShowNavContent={false}
  >
    <div
      className="NavContent__NavContainer-sc-1fjhoh9-0 egWEWD"
    >
      <MobileContainer>
        <Container
          className="MobileContainer-sc-1lm99xs-0 grSHFn"
          fluid={false}
        >
          <div
            className="MobileContainer-sc-1lm99xs-0 grSHFn container"
          >
            <ForwardRef
              noGutters={false}
            >
              <div
                className="row"
              >
                <Col
                  lg={2}
                >
                  <div
                    className="col-lg-2"
                  >
                    <NavLogo>
                      <NavLogo__Logo
                        href="https://github.com/DeKal/portfolio-next-js"
                      >
                        <a
                          className="NavLogo__Logo-sc-94vjc7-0 invqvT"
                          href="https://github.com/DeKal/portfolio-next-js"
                        >
                          <NavLogo__LogoText>
                            <span
                              className="NavLogo__LogoText-sc-94vjc7-1 iMA-dJr"
                            >
                              JD
                            </span>
                          </NavLogo__LogoText>
                        </a>
                      </NavLogo__Logo>
                    </NavLogo>
                  </div>
                </Col>
                <Col
                  fluid="true"
                >
                  <div
                    className="col"
                    fluid="true"
                  >
                    <NavContent__NavMenu>
                      <nav
                        className="NavContent__NavMenu-sc-1fjhoh9-1 hJvlsz"
                      >
                        <ul>
                          <NavContent__NavLi
                            key="Home"
                          >
                            <li
                              className="NavContent__NavLi-sc-1fjhoh9-2 uiPJU"
                            >
                              <NavItem
                                isSelected={false}
                                page={
                                  Object {
                                    "cmpName": "Home",
                                    "name": "Home",
                                    "url": "/#Home",
                                  }
                                }
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="/#Home"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-sc-1wmlvlx-0 ygPuK"
                                    data-test-id="nav-link"
                                    href="/#Home"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="Home"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="Home"
                                      >
                                        Missing translationId: Home for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                          <NavContent__NavLi
                            key="About"
                          >
                            <li
                              className="NavContent__NavLi-sc-1fjhoh9-2 uiPJU"
                            >
                              <NavItem
                                isSelected={false}
                                page={
                                  Object {
                                    "cmpName": "About",
                                    "name": "About",
                                    "url": "/#About",
                                  }
                                }
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="/#About"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-sc-1wmlvlx-0 ygPuK"
                                    data-test-id="nav-link"
                                    href="/#About"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="About"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="About"
                                      >
                                        Missing translationId: About for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                          <NavContent__NavLi
                            key="Experiences"
                          >
                            <li
                              className="NavContent__NavLi-sc-1fjhoh9-2 uiPJU"
                            >
                              <NavItem
                                isSelected={false}
                                page={
                                  Object {
                                    "cmpName": "Experiences",
                                    "name": "Experiences",
                                    "url": "/#Experiences",
                                  }
                                }
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="/#Experiences"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-sc-1wmlvlx-0 ygPuK"
                                    data-test-id="nav-link"
                                    href="/#Experiences"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="Experiences"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="Experiences"
                                      >
                                        Missing translationId: Experiences for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                          <NavContent__NavLi
                            key="Projects"
                          >
                            <li
                              className="NavContent__NavLi-sc-1fjhoh9-2 uiPJU"
                            >
                              <NavItem
                                isSelected={false}
                                page={
                                  Object {
                                    "cmpName": "Projects",
                                    "name": "Projects",
                                    "url": "/#Projects",
                                  }
                                }
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="/#Projects"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-sc-1wmlvlx-0 ygPuK"
                                    data-test-id="nav-link"
                                    href="/#Projects"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="Projects"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="Projects"
                                      >
                                        Missing translationId: Projects for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                          <NavContent__NavLi
                            key="Certifications"
                          >
                            <li
                              className="NavContent__NavLi-sc-1fjhoh9-2 uiPJU"
                            >
                              <NavItem
                                isSelected={false}
                                page={
                                  Object {
                                    "cmpName": "Certifications",
                                    "name": "Certifications",
                                    "url": "/#Certifications",
                                  }
                                }
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="/#Certifications"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-sc-1wmlvlx-0 ygPuK"
                                    data-test-id="nav-link"
                                    href="/#Certifications"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="Certifications"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="Certifications"
                                      >
                                        Missing translationId: Certifications for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                          <NavContent__NavLi
                            key="Contacts"
                          >
                            <li
                              className="NavContent__NavLi-sc-1fjhoh9-2 uiPJU"
                            >
                              <NavItem
                                isSelected={false}
                                page={
                                  Object {
                                    "cmpName": "Contacts",
                                    "name": "Contacts",
                                    "url": "/#Contacts",
                                  }
                                }
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="/#Contacts"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-sc-1wmlvlx-0 ygPuK"
                                    data-test-id="nav-link"
                                    href="/#Contacts"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="Contacts"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="Contacts"
                                      >
                                        Missing translationId: Contacts for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                          <NavContent__NavLi
                            key="Blogs"
                          >
                            <li
                              className="NavContent__NavLi-sc-1fjhoh9-2 uiPJU"
                            >
                              <NavItem
                                isSelected={false}
                                page={
                                  Object {
                                    "cmpName": "blogs",
                                    "name": "Blogs",
                                    "url": "/blogs",
                                  }
                                }
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="/blogs"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-sc-1wmlvlx-0 ygPuK"
                                    data-test-id="nav-link"
                                    href="/blogs"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="Blogs"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="Blogs"
                                      >
                                        Missing translationId: Blogs for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                        </ul>
                      </nav>
                    </NavContent__NavMenu>
                  </div>
                </Col>
              </div>
            </ForwardRef>
          </div>
        </Container>
      </MobileContainer>
    </div>
  </NavContent__NavContainer>
</NavContent>
`;

exports[`Nav Content should render with isShowNavContent enable 1`] = `
<NavContent
  isShowNavContent={true}
>
  <NavContent__NavContainer
    isShowNavContent={true}
  >
    <div
      className="NavContent__NavContainer-sc-1fjhoh9-0 bHOqLp"
    >
      <MobileContainer>
        <Container
          className="MobileContainer-sc-1lm99xs-0 grSHFn"
          fluid={false}
        >
          <div
            className="MobileContainer-sc-1lm99xs-0 grSHFn container"
          >
            <ForwardRef
              noGutters={false}
            >
              <div
                className="row"
              >
                <Col
                  lg={2}
                >
                  <div
                    className="col-lg-2"
                  >
                    <NavLogo>
                      <NavLogo__Logo
                        href="https://github.com/DeKal/portfolio-next-js"
                      >
                        <a
                          className="NavLogo__Logo-sc-94vjc7-0 invqvT"
                          href="https://github.com/DeKal/portfolio-next-js"
                        >
                          <NavLogo__LogoText>
                            <span
                              className="NavLogo__LogoText-sc-94vjc7-1 iMA-dJr"
                            >
                              JD
                            </span>
                          </NavLogo__LogoText>
                        </a>
                      </NavLogo__Logo>
                    </NavLogo>
                  </div>
                </Col>
                <Col
                  fluid="true"
                >
                  <div
                    className="col"
                    fluid="true"
                  >
                    <NavContent__NavMenu>
                      <nav
                        className="NavContent__NavMenu-sc-1fjhoh9-1 hJvlsz"
                      >
                        <ul>
                          <NavContent__NavLi
                            key="Home"
                          >
                            <li
                              className="NavContent__NavLi-sc-1fjhoh9-2 uiPJU"
                            >
                              <NavItem
                                isSelected={false}
                                page={
                                  Object {
                                    "cmpName": "Home",
                                    "name": "Home",
                                    "url": "/#Home",
                                  }
                                }
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="/#Home"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-sc-1wmlvlx-0 ygPuK"
                                    data-test-id="nav-link"
                                    href="/#Home"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="Home"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="Home"
                                      >
                                        Missing translationId: Home for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                          <NavContent__NavLi
                            key="About"
                          >
                            <li
                              className="NavContent__NavLi-sc-1fjhoh9-2 uiPJU"
                            >
                              <NavItem
                                isSelected={false}
                                page={
                                  Object {
                                    "cmpName": "About",
                                    "name": "About",
                                    "url": "/#About",
                                  }
                                }
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="/#About"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-sc-1wmlvlx-0 ygPuK"
                                    data-test-id="nav-link"
                                    href="/#About"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="About"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="About"
                                      >
                                        Missing translationId: About for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                          <NavContent__NavLi
                            key="Experiences"
                          >
                            <li
                              className="NavContent__NavLi-sc-1fjhoh9-2 uiPJU"
                            >
                              <NavItem
                                isSelected={false}
                                page={
                                  Object {
                                    "cmpName": "Experiences",
                                    "name": "Experiences",
                                    "url": "/#Experiences",
                                  }
                                }
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="/#Experiences"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-sc-1wmlvlx-0 ygPuK"
                                    data-test-id="nav-link"
                                    href="/#Experiences"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="Experiences"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="Experiences"
                                      >
                                        Missing translationId: Experiences for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                          <NavContent__NavLi
                            key="Projects"
                          >
                            <li
                              className="NavContent__NavLi-sc-1fjhoh9-2 uiPJU"
                            >
                              <NavItem
                                isSelected={false}
                                page={
                                  Object {
                                    "cmpName": "Projects",
                                    "name": "Projects",
                                    "url": "/#Projects",
                                  }
                                }
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="/#Projects"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-sc-1wmlvlx-0 ygPuK"
                                    data-test-id="nav-link"
                                    href="/#Projects"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="Projects"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="Projects"
                                      >
                                        Missing translationId: Projects for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                          <NavContent__NavLi
                            key="Certifications"
                          >
                            <li
                              className="NavContent__NavLi-sc-1fjhoh9-2 uiPJU"
                            >
                              <NavItem
                                isSelected={false}
                                page={
                                  Object {
                                    "cmpName": "Certifications",
                                    "name": "Certifications",
                                    "url": "/#Certifications",
                                  }
                                }
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="/#Certifications"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-sc-1wmlvlx-0 ygPuK"
                                    data-test-id="nav-link"
                                    href="/#Certifications"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="Certifications"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="Certifications"
                                      >
                                        Missing translationId: Certifications for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                          <NavContent__NavLi
                            key="Contacts"
                          >
                            <li
                              className="NavContent__NavLi-sc-1fjhoh9-2 uiPJU"
                            >
                              <NavItem
                                isSelected={false}
                                page={
                                  Object {
                                    "cmpName": "Contacts",
                                    "name": "Contacts",
                                    "url": "/#Contacts",
                                  }
                                }
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="/#Contacts"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-sc-1wmlvlx-0 ygPuK"
                                    data-test-id="nav-link"
                                    href="/#Contacts"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="Contacts"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="Contacts"
                                      >
                                        Missing translationId: Contacts for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                          <NavContent__NavLi
                            key="Blogs"
                          >
                            <li
                              className="NavContent__NavLi-sc-1fjhoh9-2 uiPJU"
                            >
                              <NavItem
                                isSelected={false}
                                page={
                                  Object {
                                    "cmpName": "blogs",
                                    "name": "Blogs",
                                    "url": "/blogs",
                                  }
                                }
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="/blogs"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-sc-1wmlvlx-0 ygPuK"
                                    data-test-id="nav-link"
                                    href="/blogs"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="Blogs"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="Blogs"
                                      >
                                        Missing translationId: Blogs for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                        </ul>
                      </nav>
                    </NavContent__NavMenu>
                  </div>
                </Col>
              </div>
            </ForwardRef>
          </div>
        </Container>
      </MobileContainer>
    </div>
  </NavContent__NavContainer>
</NavContent>
`;

exports[`Nav Content should render without throwing an error 1`] = `
<NavContent__NavContainer>
  <MobileContainer>
    <ForwardRef
      noGutters={false}
    >
      <Col
        lg={2}
      >
        <NavLogo />
      </Col>
      <Col
        fluid="true"
      >
        <NavContent__NavMenu>
          <ul>
            <NavContent__NavLi
              key="Home"
            >
              <NavItem
                isSelected={false}
                page={
                  Object {
                    "cmpName": "Home",
                    "name": "Home",
                    "url": "/#Home",
                  }
                }
                setSelectedPage={[Function]}
              />
            </NavContent__NavLi>
            <NavContent__NavLi
              key="About"
            >
              <NavItem
                isSelected={false}
                page={
                  Object {
                    "cmpName": "About",
                    "name": "About",
                    "url": "/#About",
                  }
                }
                setSelectedPage={[Function]}
              />
            </NavContent__NavLi>
            <NavContent__NavLi
              key="Experiences"
            >
              <NavItem
                isSelected={false}
                page={
                  Object {
                    "cmpName": "Experiences",
                    "name": "Experiences",
                    "url": "/#Experiences",
                  }
                }
                setSelectedPage={[Function]}
              />
            </NavContent__NavLi>
            <NavContent__NavLi
              key="Projects"
            >
              <NavItem
                isSelected={false}
                page={
                  Object {
                    "cmpName": "Projects",
                    "name": "Projects",
                    "url": "/#Projects",
                  }
                }
                setSelectedPage={[Function]}
              />
            </NavContent__NavLi>
            <NavContent__NavLi
              key="Certifications"
            >
              <NavItem
                isSelected={false}
                page={
                  Object {
                    "cmpName": "Certifications",
                    "name": "Certifications",
                    "url": "/#Certifications",
                  }
                }
                setSelectedPage={[Function]}
              />
            </NavContent__NavLi>
            <NavContent__NavLi
              key="Contacts"
            >
              <NavItem
                isSelected={false}
                page={
                  Object {
                    "cmpName": "Contacts",
                    "name": "Contacts",
                    "url": "/#Contacts",
                  }
                }
                setSelectedPage={[Function]}
              />
            </NavContent__NavLi>
            <NavContent__NavLi
              key="Blogs"
            >
              <NavItem
                isSelected={false}
                page={
                  Object {
                    "cmpName": "blogs",
                    "name": "Blogs",
                    "url": "/blogs",
                  }
                }
                setSelectedPage={[Function]}
              />
            </NavContent__NavLi>
          </ul>
        </NavContent__NavMenu>
      </Col>
    </ForwardRef>
  </MobileContainer>
</NavContent__NavContainer>
`;
